# cde

./: .env.example  .gitignore  .gitmodules  .projections.json  Makefile  README.md  compose-test.yml  compose-wsl.yml  compose.yml  dist-workspace.toml  docker-bake.hcl  docker-compose.yml  justfile  start-docker-service.sh  wsl.just
adr/: 0001-organise-dockerfile-contents.adoc  (+5 more)
tools/github-latest-release-downloader/: AGENTS.md  Cargo.toml  README.md  adrs.toml  justfile
tools/github-latest-release-downloader/.specify/integrations/: opencode.manifest.json  speckit.manifest.json
tools/github-latest-release-downloader/openspec/changes/add-download-location-flag/: design.md  tasks.md
tools/github-latest-release-downloader/openspec/changes/add-extract-flag/: design.md  proposal.md  tasks.md
tools/github-latest-release-downloader/openspec/changes/download-assets-from-url/: design.md  proposal.md  tasks.md
tools/github-latest-release-downloader/openspec/changes/extract-target-rename/: design.md  proposal.md  tasks.md
tools/github-latest-release-downloader/openspec/changes/url-to-api-url-converter/: design.md  proposal.md  tasks.md
tools/github-latest-release-downloader/openspec/specs/asset-download/: spec.md
tools/github-latest-release-downloader/openspec/specs/asset-extraction/: spec.md
tools/github-latest-release-downloader/specs/001-github-release-url-builder/: spec.md
tools/github-latest-release-downloader/src/: lib.rs  main.rs
tools/github-latest-release-downloader/src/cli/: args.rs
tools/github-latest-release-downloader/src/github/: downloader.rs  github.rs  mod.rs
(+210 files in other folders)
