[package]
name = "github-latest-release-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
url = "2"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
